force-app/main/default/objects/OrderLineCoupon__c/OrderLineCoupon__c.object-meta.xml
<CustomObject>
    <label>Order Line Coupon</label>
    <nameField>
        <label>OrderLineCoupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>