force-app/main/default/objects/OrderLineCoupon__c/fields/Discount_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_del__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>