force-app/main/default/objects/OrderLineCoupon__c/fields/Line_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Line_Coupon__c</fullName>
    <label>Line Coupon</label>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Order Line Coupons</relationshipLabel>
    <relationshipName>Order_Line_Coupons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>