force-app/main/default/objects/OrderLineCoupon__c/fields/Negative_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Discount_Amount__c</fullName>
    <formula>- Discount_Amount_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>