force-app/main/default/objects/OrderLineCoupon__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Order Line Coupons</relationshipLabel>
    <relationshipName>Order_Line_Coupons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>