force-app/main/default/objects/OrderLineCoupon__c/fields/Process_CD__c.field-meta.xml
<CustomField>
    <fullName>Process_CD__c</fullName>
    <formula>Discount_Amount_del__c &lt;&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CD</label>
    <type>Checkbox</type>
</CustomField>