force-app/main/default/objects/OrderLineCoupon__c/fields/Processed_CD__c.field-meta.xml
<CustomField>
    <fullName>Processed_CD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed CD</label>
    <type>Checkbox</type>
</CustomField>