force-app/main/default/objects/OrderLineCoupon__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>OLI Coupons</relationshipLabel>
    <relationshipName>OLI_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>